# commands-wrapper

./: .gitignore  README.md  commands.yaml  pyproject.toml
.commands-wrapper/: commands-wrapper  install.ps1  install.sh  uninstall.ps1  uninstall.sh
commands_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_commands_wrapper.py  test_cross_platform.py
